# deucalion

./: Cargo.toml  README.md  build.rs  pgp.txt  rustfmt.toml
.github/workflows/: build.yml  deobf-canary.yml  release.yml  test.yml
deucalion/: Cargo.toml  build.rs
deucalion-client/: Cargo.toml  README.md
deucalion-client/src/: lib.rs  packet.rs  process.rs  subscriber.rs
deucalion-extras/: Cargo.toml  README.md
deucalion/src/: lib.rs  namedpipe.rs  procloader.rs  rpc.rs  server.rs  w32module.rs
deucalion/src/hook/: create_target.rs  mod.rs  mov_disasm.rs  packet.rs  recv.rs  send.rs  send_lobby.rs  waitgroup.rs
shims/: bcryptprimitives.rs
src/: lib.rs  namedpipe.rs  procloader.rs  rpc.rs  server.rs
src/hook/: mod.rs  packet.rs  recv.rs  recvzonepacket.rs  send.rs  send_lobby.rs
