[package]
name = "deucalion"
version = "0.1.0"
authors = ["ff14wed"]
edition = "2018"

[lib]
name = "deucalion"
crate-type = ["dylib"]

[dependencies]
tokio = { version = "1.25.0", features = ["io-util", "sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
parity-tokio-ipc = "0.9"
futures = "0.3"
failure = "0.1.8"
failure_derive = "0.1.8"
bytes = "1.4.0"
stream-cancel = "0.8.1"
log = "0.4"
simplelog = "0.12"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
parking_lot = "0.12.1"
pelite = "0.10"
twoway = "0.2.2"
region = "3.0"
once_cell = "1.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "minwindef", "minwinbase", "processthreadsapi", "libloaderapi", "consoleapi", "wincon"
] }
