[package]
name = "deucalion"
version = "0.7.0"
authors = ["ff14wed"]
edition = "2021"

[lib]
name = "deucalion"
crate-type = ["dylib"]

[dependencies]
tokio = { version = "1.25.0", features = ["io-util", "sync", "rt", "rt-multi-thread", "net", "time", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.4.0"
stream-cancel = "0.8.1"
log = "0.4"
simplelog = "0.12"
retour = "0.1.0"
parking_lot = "0.12.1"
pelite = "0.10"
memchr = "2.5"
region = "3.0"
once_cell = "1.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "minwindef", "minwinbase", "processthreadsapi", "libloaderapi", "consoleapi", "wincon"
] }

[dev-dependencies]
ntest = "*"
rand = "0.8.5"