
[package]
name = "deucalion-client"
version = "1.1.0-beta.0"
authors = ["ff14wed"]
edition = "2021"
license = "GPL-3.0"
description = "An implementation of a Deucalion client."
homepage = "https://github.com/ff14wed/deucalion"
repository = "https://github.com/ff14wed/deucalion"
readme = "README.md"
keywords = ["ffxiv", "windows", "dll-injection", "dll"]

[dependencies]
deucalion = { path = "../deucalion" }
tokio = { version = "1.38.0", features = ["io-util", "sync", "rt"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-retry = "0.3"
futures = "0.3"
dll-syringe = { git = "https://github.com/OpenByteDev/dll-syringe", rev = "c8762b1" }
sysinfo = "0.30"
winapi = { version = "0.3", features = ["aclapi", "processthreadsapi"] }
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
clap = { version = "4.5", features = ["derive"] }
