[package]
name = "deucalion"
version = "1.3.1"
authors = ["ff14wed"]
edition = "2024"
build = "build.rs"
license = "GPL-3.0"
description = "High-performance Windows library for capturing decoded FFXIV packets."
homepage = "https://github.com/ff14wed/deucalion"
repository = "https://github.com/ff14wed/deucalion"
readme = "../README.md"
keywords = ["ffxiv", "windows", "dll-injection", "dll"]

[package.metadata.winres]
OriginalFilename = "deucalion.dll"
CompanyName = "Flawed"
LegalCopyright = "Copyright (C) Flawed"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[lib]
name = "deucalion"
crate-type = ["rlib", "dylib"]

[dependencies]
tokio = { version = "1.44.1", features = [
  "io-util",
  "sync",
  "rt",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
] }
tokio-util = { version = "0.7.14", features = ["codec", "compat"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1"
stream-cancel = "0.8.2"
log = "0.4"
simplelog = "0.12"
retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }
parking_lot = "0.12"
pelite = "0.10"
memchr = "2"
once_cell = "1.21"
binary-layout = "4.0"
dirs = "6.0"
strum = "0.27"
strum_macros = "0.27"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "errhandlingapi",
  "minwindef",
  "minwinbase",
  "processthreadsapi",
  "libloaderapi",
  "consoleapi",
  "wincon",
  "tlhelp32",
] }

[dev-dependencies]
ntest = "0.9"
rand = "0.9.0"

[build-dependencies]
winres = "0.1"
anyhow = "1.0"
vergen-git2 = { version = "1", features = ["build"] }
